[package]
name = "nunny"
version = "0.0.0"
edition = "2021"
description = "the definitive non-empty collections library for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/nunny"
documentation = "https://docs.rs/nunny"
repository = "https://github.com/aatifsyed/nunny"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[workspace]
members = ["gen"]
