[package]
name = "nunny"
version = "0.0.0"
edition = "2021"
description = "the definitive non-empty collections library for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/nunny"
documentation = "https://docs.rs/nunny"
repository = "https://github.com/aatifsyed/nunny"

[features]
default = ["std"]
std = ["alloc", "serde1/std"]
alloc = ["serde1?/alloc"]
# This feature will always track the latest (API) version of serde.
# Changing it to `serde2` is not considered a breaking change
serde = ["serde1"]
serde1 = ["dep:serde1"]
# This feature will always track the latest (API) version of arbitrary.
# Changing it to `arbitrary2` is not considered a breaking change
arbitrary = ["arbitrary1"]
arbitrary1 = ["dep:arbitrary1", "std"]

[dependencies]
arbitrary1 = { version = "1.3.2", package = "arbitrary", optional = true }
serde1 = { version = "1.0.198", package = "serde", optional = true, default-features = false }

[workspace]
members = ["gen"]
