[package]
name = "nunny"
version = "0.1.3"
edition = "2021"
description = "the definitive non-empty slice/array/vec library for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/nunny"
documentation = "https://docs.rs/nunny"
repository = "https://github.com/aatifsyed/nunny"
categories = [
    "rust-patterns",
    "no-std",
    "memory-management",
    "embedded",
    "data-structures",
]

[features]
default = ["std"]
std = ["alloc", "serde1/std"]
alloc = ["serde1?/alloc"]
# This feature will always track the latest (API) version of serde.
# Changing it to `serde2` is not considered a breaking change
serde = ["serde1"]
serde1 = ["dep:serde1"]
# This feature will always track the latest (API) version of arbitrary.
# Changing it to `arbitrary2` is not considered a breaking change
arbitrary = ["arbitrary1"]
arbitrary1 = ["dep:arbitrary1", "std"]
# This feature will always track the latest (API) version of quickcheck.
# Changing it to `quickcheck2` is not considered a breaking change
quickcheck = ["quickcheck1"]
quickcheck1 = ["dep:quickcheck1", "std"]
# This feature will always track the latest (API) version of proptest.
# Changing it to `proptest2` is not considered a breaking change
# proptest has a `std` and `alloc` feature, but trying --no-default-features with them broke...
proptest = ["proptest1"]
proptest1 = ["dep:proptest1", "std"]
# This feature will always track the latest (API) version of schemars.
# Changing it to `schemars09` is not considered a breaking change
schemars = ["schemars08"]
schemars08 = ["dep:schemars08", "std"]

[dependencies]
proptest1 = { version = "1.4.0", package = "proptest", optional = true }
arbitrary1 = { version = "1.3.2", package = "arbitrary", optional = true }
quickcheck1 = { version = "1.0.3", package = "quickcheck", optional = true, default-features = false }
serde1 = { version = "1.0.198", package = "serde", optional = true, default-features = false }
schemars08 = { version = "0.8.16", package = "schemars", optional = true, default-features = false }

[workspace]
members = ["gen"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "do_doc_cfg"]
